# JXSG_NN

./: .gitignore  CMakeLists.txt  README.md
config/: MNIST-Test.json  MNIST.json  NAND.json  train.json
headers/: ConvLayer.hpp  FCLayer.hpp  Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
headers/utils/: Math.hpp  Misc.hpp
src/: ConvLayer.cpp  FCLayer.cpp  Layer.cpp  Matrix.cpp  Neuron.cpp  main.cpp  train.cpp
src/neural_network/: NeuralNetwork.cpp  backPropagation.cpp  feedForward.cpp  loadWeights.cpp  setErrors.cpp  test.cpp  train.cpp
src/utils/: Math.cpp  Misc.cpp
